k8s-jenkins-sonar/jenkins/jenkins-depl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: akuznetsova/my-jenkins-image:1.1
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: pod-volumes-persvolume-volume
              mountPath: /var/jenkins_home
      volumes:
        - name: pod-volumes-persvolume-volume
          persistentVolumeClaim:
            claimName: localvolume-pvc
